Remove cli package and edit readme file
besides, change dist folder for core package into root dir

--- a/package.json
+++ b/package.json
@@ -2,20 +2,8 @@
   "name": "tracespace",
   "private": true,
   "scripts": {
-    "all": "pnpm clean && pnpm build:types && concurrently -g pnpm:format:check pnpm:lint pnpm:build:packages pnpm:test:once",
-    "check": "pnpm clean && pnpm build:types && concurrently -g pnpm:format:check pnpm:lint pnpm:build:packages",
-    "test": "vitest",
-    "test:once": "vitest run --coverage",
-    "lint": "eslint --ext .js,.ts,.tsx --cache .",
-    "format": "pnpm format:base --write",
-    "format:check": "pnpm format:base --check",
-    "format:base": "prettier \"**/*.@(js|ts|tsx|json|md|yml|yaml)\"",
-    "build": "concurrently -g pnpm:build:*",
     "build:packages": "pnpm -r --aggregate-output build",
-    "build:types": "tsc --build",
-    "clean": "tsc --build --clean",
-    "dev": "pnpm -C www dev",
-    "preview": "pnpm -C www preview"
+    "clean": "tsc --build --clean"
   },
   "type": "module",
   "engines": {
@@ -59,12 +47,8 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^45.0.2",
-    "jsdom": "^21.0.0",
     "lodash": "^4.17.21",
-    "preact": "^10.11.3",
     "prettier": "^2.8.3",
-    "react": "npm:@preact/compat@^17.1.2",
-    "react-dom": "npm:@preact/compat@^17.1.2",
     "tempy": "^3.0.0",
     "testdouble": "^3.16.8",
     "testdouble-vitest": "^0.1.2",
